# sigil-flash

./: .gitignore  README.md  index.html  package.json  setup.sh  skills-lock.json  vite.config.ts
.agents/: agent.sh
docs/: MANUFACTURING_API_KEY.md  OFFLINE_PACKAGES.md  funcionamiento.m  funcionamiento.md
scripts/: build-offline-repository.sh  extract-official-apt-metadata.sh
sigil-hardware/: .gitignore  README.md  install.sh  scratch-e2e.rs
sigil-hardware/conf/: 90-sigil-geolocate  90-sigil-persistent-journal.conf  99-sigil-mac-fixed.conf  audio.conf  bluetooth-main.conf  default.pa  dnsmasq.conf  hostapd.conf  pulse-daemon.conf  security.conf  sigil-logrotate  sigil-network.sudoers  sigil-tmpfiles.conf  sigil.sudoers  wifi-fallback.conf
sigil-hardware/docs/: ARCHITECTURE_PLAN_PHASE1.md  DEVICE_IDENTITY_CONTRACT.md  ENGINEERING_AUDIT_COMPLETE.md  FLASHER_ENGINE_CONTRACT.md  OFFLINE_FLASHER_LINUX_ONLY.md  (+7 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: flash.rs  main.rs
src-tauri/src/commands/: config.rs  disks.rs  downloads.rs  engine.rs  flash.rs  mod.rs  offline_packages.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: config_service.rs  disk_service.rs  download_service.rs  engine_service.rs  flash_service.rs  mod.rs  offline_package_service.rs  verification_service.rs
tests/: test_image_injection.py  test_offline_package_manager.sh  test_offline_ui.py
(+131 files in other folders)
