[package]
name = "sigil-flash"
version = "0.1.0"
description = "Raspberry Pi Image Flasher"
authors = ["Sigil Flash"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
futures-util = "0.3"
getrandom = "0.3"
libc = "0.2"
flasher-rs = { path = "../sigil-hardware/flasher-rs" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
